--- a/parrucchieri/index.html
+++ b/parrucchieri/index.html
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-scissors"></i>  <span class="light">SuperStar</span> Barber Shop
+                    <i class="fa fa-scissors"></i>  <span class="light">Super<i class="fa fa-star" aria-hidden="true"></i>Star</span> Barber Shop
                 </a>
             </div>
 
@@ -56,7 +56,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">Prenota</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">SuperStar</h1>
-                        <p class="intro-text">il salone con l'atmosfera della classica barberia d’un tempo, <br> un taglio netto con la quotidiana “giungla” della metropoli. <br> Benvenuti da <strong>SuperStar</strong> barber shop</p>
+                        <h1 class="brand-heading">Super<i class="fa fa-star" aria-hidden="true"></i>Star</h1>
+                        <p class="intro-text">il salone con l'atmosfera della classica barberia d’un tempo, <br> un taglio netto con lo stress quotidiano. <br> L'obiettivo del nostro lavoro è la vostra soddisfazione!</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -89,10 +89,10 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>About Super<i class="fa fa-star" aria-hidden="true"></i>Star</h2>
+                <p><a href="#">SuperStar Barber Shop</a> è una nota bottega di barbiere, conosciuta in tutta la città poichè unisce la <a href="#">tradizione</a> e  la <a href="#">professionalità</a> di un tempo alla modernità.</p>
+                <p>L'attenzione, la cura e la soddisfazione dei clienti sono la nostra missione. La <a href="#">tradizione</a> degli antichi barbieri moderni unita alla <a href="#">tecnica</a> dei nostri giorni</p>
+                <p>Entrando nel nostro negozio assaporerete un'atmosfera d'altri tempi che non vi dimenticherete facilmente. Accomodatevi su una delle nostre poltrone e fatevi coccolare!</p>
             </div>
         </div>
     </section>
@@ -102,9 +102,9 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Prendi un appuntamento</h2>
+                    <p>Puoi vedere gli spazi disponibili e prendere un appuntamento in pochi secondi cliccando questo bottone:</p>
+                    <a href="#" class="btn btn-default btn-lg">Prenota Subito</a>
                 </div>
             </div>
         </div>
@@ -114,19 +114,19 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Per informazioni</h2>
+                <p>Se hai qualche domanda da farci o qualche motivo per contattarci, inviaci una mail all'indirizzo:</p>
+                <p><a href="#">contact@superstar.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="#" class="btn btn-default btn-lg"><i class="fa fa-pinterest fa-fw"></i> <span class="network-name">Pinterest</span></a>
                     </li>
                 </ul>
             </div>
@@ -139,7 +139,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; Super<i class="fa fa-star" aria-hidden="true"></i>Star 2016</p>
         </div>
     </footer>
 
