--- a/centri medici/index.html
+++ b/centri medici/index.html
@@ -104,22 +104,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 about-grid">
 					<img src="images/a1.jpg" alt="" class="img-responsive">
 					<div class="grid-details">
-						<h3>Dipartimento di Area Medica</h3>
-						<p>è composto dalle Unità di Medicina Generale, Servizio di Diabetologia, Servizio di Medicina Preventiva e Check-up.</p>
+						<h3>Laboratorio</h3>
+					</div>
+				</div>
+				<div class="col-md-4 about-grid">
+					<img src="images/a3.jpg"  alt="" class="img-responsive">
+					<div class="grid-details">
+						<h3>Medici</h3>
 					</div>
 				</div>
 				<div class="col-md-4 about-grid">
 					<img src="images/a2.jpg" alt="" class="img-responsive">
 					<div class="grid-details">
-						<h3>Dipartimento dei Servizi Sanitari </h3>
-						<p>comprende il Servizio di Radiologia e Diagnostica per Immagini, Servizio di Gastroenterologia  e il Laboratorio Analisi.</p>
-					</div>
-				</div>
-				<div class="col-md-4 about-grid">
-					<img src="images/a3.jpg" alt="" class="img-responsive">
-					<div class="grid-details">
-						<h3>Dipartimento di Area Chirurgica</h3>
-						<p>comprende le Unità Operative di Chirurgia Generale, di Oculistica, Ortopedia, Otorinolaringoiatria, Urologia.</p>
+						<h3>Infermieri</h3>
 					</div>
 				</div>
 			  <div class="clearfix"> </div>
@@ -186,7 +183,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="ser-icon">
 						<a href="#" class="hi-icon hi-icon-archive glyphicon glyphicon-tint"> </a>
 					</div>
-					<h4>Medicina generale</h4>
+					<h4>Esami</h4>
 				</div>
 			  </div>
 			</div>
@@ -343,7 +340,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="https://cdn.rawgit.com/qandobooking/qando-js-sdk/master/lib/qando.js"></script>
     <script type="text/javascript">(function() {
       qando.booking('#qando-root', {
-        shop: 'Clinica Dott.Cura',
+        shop: 'clinicadottcuracom',
         css: true,
         header: true,
         footer: true,
