--- a/centri sportivi/index.html
+++ b/centri sportivi/index.html
@@ -231,10 +231,10 @@ http://www.templatemo.com/tm-401-sprint
     <script type="text/javascript" src="https://cdn.rawgit.com/qandobooking/qando-js-sdk/master/lib/qando.js"></script>
      <script type="text/javascript">(function() {
        qando.booking('#qando-root', {
-         shop: 'Campo Sportivo',
+         shop: 'camposportivo',
          css: true,
-         header: true,
-         footer: true,
+         header: false,
+         footer: false,
        });
      })();
      </script>
