--- a/professionisti/codes.html
+++ b/professionisti/codes.html
@@ -208,7 +208,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<script type="text/javascript" src="https://cdn.rawgit.com/qandobooking/qando-js-sdk/master/lib/qando.js"></script>
     <script type="text/javascript">(function() {
       qando.booking('#qando-root', {
-        shop: 'estetista',
+        shop: 'studiolegalebuonuomocom',
         css: true,
         header: false,
         footer: false,
