--- a/scuole sci/404.html
+++ b/scuole sci/404.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Snow Skating Online shopping and Sports category Flat bootstrap Responsive Website Template |404 :: w3layouts</title>
+		<title>Prenota</title>
 		<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		 <!-- Custom Theme files -->
@@ -225,7 +225,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<script type="text/javascript" src="https://cdn.rawgit.com/qandobooking/qando-js-sdk/master/lib/qando.js"></script>
 		     <script type="text/javascript">(function() {
 		       qando.booking('#qando-root', {
-		         shop: 'estetista',
+		         shop: 'scuolascimaestrocom',
 		         css: true,
 		         header: false,
 		         footer: false,
